third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_global_bad2.old.exp

Diagnostics:
error: cannot extract resource `A::T` which is still borrowed
  ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_bad2.move:8:22
  │
7 │         let t_ref = borrow_global_mut<T>(sender);
  │                     ---------------------------- previous mutable global borrow
8 │         T { v: _ } = move_from<T>(sender);
  │                      ^^^^^^^^^^^^^^^^^^^^ extracted here
